<resources>
    <string name="app_name">WheelchairMap</string>

    <!--    Main Activity strings    -->
    <string name="activity_main_title">Welcome to WheelchairMap app</string>
    <string-array name="activity_main_location_array">
        <item>-- None --</item>
        <item>Reutlingen University</item>
        <item>Austral University</item>
    </string-array>
    <string name="activity_main_selection_error">Please select a location</string>
    <string name="activity_main_location_selection_button">Select</string>
    <string name="activity_main_language_selection_button">Change Language</string>
    <string name="activity_main_text">
        Attention: This app needs to download content. In order to use the app, you will need to
        set either the data connection or wifi.
    </string>

    <!--    Map Activity strings -->
    <string name="activity_maps_title">WheelchairMap</string>
    <string name="activity_map_layout_name">com.google.android.gms.maps.SupportMapFragment</string>
    <string name="activity_map_transparency_text">Transparency</string>

    <!--    Blueprint Activity strings  -->
    <string name="activity_blueprint_zoom_image_text">Zooming image</string>

    <!--    Menu Map Activity    -->
    <string name="menu_map_action_info">Info</string>
    <string name="menu_map_action_show_routes">Show Routes</string>
    <string name="menu_map_action_select_building">Select Building</string>
    <string name="menu_map_action_contact">Contact</string>

    <!--    Menu Blueprint Activity     -->
    <string name="menu_blueprint_action_info">Info</string>
    <string name="menu_blueprint_action_show_location">Show location</string>
    <string name="menu_blueprint_action_underground">UGD</string>
    <string name="menu_blueprint_action_main_floor">0F</string>
    <string name="menu_blueprint_action_first_floor">1F</string>
    <string name="menu_blueprint_action_second_floor">2F</string>
    <string name="menu_blueprint_action_third_floor">3F</string>

    <!--    Dialog App Info     -->
    <string name="dialog_app_info_title">WheelchairMap</string>
    <string name="dialog_app_info_message">
        Welcome to the WheelchairMap app!\nThe objective of this app is to provide information
        for people with special needs, specifically for wheelchair users.\nTo get information about
        a building in particular just tap on it. Furthermore, to know the possible routes to the
        buildings through the campus just tap on the map icon on the menu.\nIcons reference:
    </string>
    <string name="dialog_app_info_text_plane">The terrain is plane</string>
    <string name="dialog_app_info_text_inclined">The terrain is inclined</string>
    <string name="dialog_app_info_text_elevator">Elevator with disability access</string>
    <string name="dialog_app_info_text_automatic_door">Doors open automatically</string>
    <string name="dialog_app_info_text_assistance">Assistance necessary to circulate</string>
    <string name="dialog_app_info_text_wc">WC with disability access</string>
    <string name="dialog_app_info_text_exit">Disability emergency exits</string>

    <!--    Dialog Building Selection   -->
    <string name="dialog_building_selection_message">Select a building</string>
    <string-array name="dialog_reutlingen_buildings_array">
        <item>-- None --</item>
        <item>Building 9</item>
    </string-array>
    <string-array name="dialog_austral_buildings_array">
        <item>-- None --</item>
        <item>Building Admin</item>
        <item>Building A</item>
        <item>Building B</item>
    </string-array>
    <string name="dialog_building_selection_button">Select</string>
    <string name="dialog_building_selection_error_message">Please select a building</string>
    <string name="dialog_building_selection_not_available_message">This building blueprint is currently not available</string>

    <!--    Dialog Building Info   -->
    <string name="dialog_building_info_title">Building</string>
    <string name="dialog_building_info_btn_select">Go to building</string>
    <!--    Reutlingen Buildings    -->
    <string name="dialog_reutlingen_building_info_description_one">
        School of textile and design.\nInteractive materials teaching and research center.\nProcess
        analysis and technology teaching and research center.
    </string>
    <string name="dialog_reutlingen_building_info_description_two">
        School of applied chemistry.\nReutlingen research institute.
    </string>
    <string name="dialog_reutlingen_building_info_description_three">
        Presidium / Administration.\nStudy service center.\nInternational Office.\nLearning center.
    </string>
    <string name="dialog_reutlingen_building_info_description_four">
        School of engineering.
    </string>
    <string name="dialog_reutlingen_building_info_description_five">
        ESB Business school.
    </string>
    <string name="dialog_reutlingen_building_info_description_six">
        Aula.
    </string>
    <string name="dialog_reutlingen_building_info_description_seven">
        Cafeteria.\n
        Real training seminar.
    </string>
    <string name="dialog_reutlingen_building_info_description_eight">
        Computing and media center.
    </string>
    <string name="dialog_reutlingen_building_info_description_nine">
        School of informatics.
    </string>
    <string name="dialog_reutlingen_building_info_description_ten">
        University service center.
    </string>
    <string name="dialog_reutlingen_building_info_description_eleven">
        Gym.
    </string>
    <string name="dialog_reutlingen_building_info_description_twelve">
        Educational college.
    </string>
    <string name="dialog_reutlingen_building_info_description_thirteen">
        Day care center.
    </string>
    <string name="dialog_reutlingen_building_info_description_fourteen">
        Educational college.
    </string>
    <string name="dialog_reutlingen_building_info_description_fifteen">
        University service center.
    </string>
    <string name="dialog_reutlingen_building_info_description_sixteen">
        ESB Business school.
    </string>
    <string name="dialog_reutlingen_building_info_description_seventeen">
        ESB Business school.\nKnowledge foundation.
    </string>
    <string name="dialog_reutlingen_building_info_description_twenty">
        School of textiles and design.\nSchool of informatics.\nReutlingen energy center.
    </string>
    <!--    Austral Buildings   -->
    <string name="dialog_austral_building_info_description_admin">
        Visitors Entrance. Administration. Cafeteria. Library.
    </string>
    <string name="dialog_austral_building_info_description_a">
        Engineer Building. Auditorium. Chapel.
    </string>
    <string name="dialog_austral_building_info_description_b">
        Student Administration Office. TV Room. Radio Room.
    </string>


    <!--    Dialog Contact  -->
    <string name="dialog_contact_title">Contact</string>
    <!--    Reutlingen Data -->
    <string name="dialog_contact_reutlingen_responsibility">Counseling for students with health impairment</string>
    <string name="dialog_contact_reutlingen_message">
        Prof. Dr. Bernd Herr (SHE Supervisor for students)\nTel .: 07121 / 271-2025\n\nVeronika
        Bothor (Deputy Disabilities Commissioner for students)\nTel .: 07121 / 271-1067
    </string>
    <string name="dialog_contact_reutlingen_place">
        Reutlingen University\nAlteburgstraße 150\nD-72762 Reutlingen
    </string>
    <!--    Austral Data    -->
    <string name="dialog_contact_austral_responsibility">For any question or doubt, please contact:</string>
    <string name="dialog_contact_austral_message">
        Main line: (+54 11) 5239-8000\n
        Undergraduate: 0800 222 8648
    </string>
    <string name="dialog_contact_austral_place">
        Austral University\nMariano Acosta 1611.\n(B1629WWA) Derqui, Pilar. Buenos Aires.
    </string>

    <!--    Dialog Blueprint  -->
    <string name="dialog_blueprint_title">Blueprint</string>
    <string name="dialog_blueprint_message">
        Here you can view the blueprint of the building. You can view all the rooms in each floor
        as well as its number.\nAlso, you can view the icons shown in the info an its exact location.
    </string>

    <!--    Alert Dialog Internet strings -->
    <string name="alert_dialog_internet_title">Important</string>
    <string name="alert_dialog_internet_message">
        You need to turn on your internet connection to be able to use this application.\nPlease
        turn on your data connection or wifi on the settings.
    </string>
    <string name="alert_dialog_internet_btn_data_settings">Data Settings</string>
    <string name="alert_dialog_internet_btn_wifi_settings">Wifi Settings</string>
    <string name="alert_dialog_internet_connected_btn_cancel">Continue anyway</string>
    <string name="alert_dialog_internet_not_connected_btn_cancel">Cancel</string>
    <string name="alert_dialog_internet_improvement_title">Caution</string>
    <string name="alert_dialog_internet_improvement_message">
        You are currently using data connection internet.\nIn order to limit your data consumption please
        turn on or connect your wifi.
    </string>

    <!--    Alert Dialog Location strings -->
    <string name="alert_dialog_location_title">Caution</string>
    <string name="alert_dialog_location_message">
        You need to activate location service to use this feature.\nPlease turn on network or
        GPS mode in location settings.
    </string>
    <string name="alert_dialog_location_btn_settings">Settings</string>
    <string name="alert_dialog_location_btn_cancel">Cancel</string>
    <string name="alert_dialog_location_improvement_title">Important</string>
    <string name="alert_dialog_location_improvement_message">
        Currently you are using Wifi and GPRS location service.\nFor better accuracy please turn
        on GPS mode in location settings.
    </string>

    <!--    Download Task   -->
    <string name="download_task_message">Downloading content</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
</resources>
