<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wheelchairMap="http://schemas.android.com/apk/res-auto">

    <group android:id="@id/menu_map_group_select_building">
        <item
            android:id="@id/menu_map_action_info"
            android:orderInCategory="1"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_map_action_info"
            wheelchairMap:showAsAction="always"/>

        <item
            android:id="@id/menu_map_action_show_routes"
            android:orderInCategory="2"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_map_action_show_routes"
            wheelchairMap:showAsAction="ifRoom"/>

        <item
            android:id="@id/menu_map_action_select_building"
            android:orderInCategory="3"
            android:title="@string/menu_map_action_select_building">
        </item>
    </group>

    <group android:id="@id/menu_map_group_contact">
        <item
            android:id="@id/menu_map_action_contact"
            android:orderInCategory="4"
            android:title="@string/menu_map_action_contact"/>
    </group>

</menu>