<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="300dp"
    android:background="@drawable/curve_sharp"
    android:orientation="vertical"
    tools:context=".javaClasses.CustomDialog">

    <TextView
        android:id="@id/dialog_app_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dialog_app_info_title"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@id/dialog_app_info_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_marginLeft="2dp"
                android:text="@string/dialog_app_info_message"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <GridLayout
                android:id="@id/dialog_app_info_grid_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="2"
                android:rowCount="8">

                <ImageView
                    android:id="@id/dialog_app_info_icon_plane"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:background="@drawable/curve_sharp_white"
                    android:visibility="visible"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />

                <TextView
                    android:id="@id/dialog_app_info_text_plane"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_app_info_text_plane"
                    android:textColor="@android:color/white"/>

                <ImageView
                    android:id="@id/dialog_app_info_icon_inclined"
                    android:layout_column="0"
                    android:layout_row="1"
                    android:background="@drawable/curve_sharp_white"
                    android:visibility="visible"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />

                <TextView
                    android:id="@id/dialog_app_info_text_inclined"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_app_info_text_inclined"
                    android:textColor="@android:color/white"/>

                <ImageView
                    android:id="@id/dialog_app_info_icon_elevator"
                    android:layout_column="0"
                    android:layout_row="2"
                    android:background="@drawable/curve_sharp_white"
                    android:visibility="visible"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />

                <TextView
                    android:id="@id/dialog_app_info_text_elevator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_app_info_text_elevator"
                    android:textColor="@android:color/white"/>

                <ImageView
                    android:id="@id/dialog_app_info_icon_automatic_door"
                    android:layout_column="0"
                    android:layout_row="3"
                    android:background="@drawable/curve_sharp_white"
                    android:visibility="visible"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />

                <TextView
                    android:id="@id/dialog_app_info_text_automatic_door"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_app_info_text_automatic_door"
                    android:textColor="@android:color/white"/>

                <ImageView
                    android:id="@id/dialog_app_info_icon_needs_assistance"
                    android:layout_column="0"
                    android:layout_row="4"
                    android:background="@drawable/curve_sharp_white"
                    android:visibility="visible"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />

                <TextView
                    android:id="@id/dialog_app_info_text_needs_assistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_app_info_text_assistance"
                    android:textColor="@android:color/white"/>

                <ImageView
                    android:id="@id/dialog_app_info_icon_wc"
                    android:layout_column="0"
                    android:layout_row="5"
                    android:background="@drawable/curve_sharp_white"
                    android:visibility="visible"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />

                <TextView
                    android:id="@id/dialog_app_info_text_wc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_app_info_text_wc"
                    android:textColor="@android:color/white"/>

                <ImageView
                    android:id="@id/dialog_app_info_icon_exit"
                    android:layout_column="0"
                    android:layout_row="6"
                    android:background="@drawable/curve_sharp_white"
                    android:visibility="visible"
                    android:layout_width="50dp"
                    android:layout_height="50dp" />

                <TextView
                    android:id="@id/dialog_app_info_text_exit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_app_info_text_exit"
                    android:textColor="@android:color/white"/>
            </GridLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>